@@ -30,6 +30,8 @@
 - added: `DatabaseBuilder.autofill()` from DBMS
 - added: `HttpFile.extension` property
 - added: `HttpFile.size` property alias to `HttpFile.length`
+- added: auto-session cleaner of unused sessions
+- added: `allow_sessions_unused` config key for cleaning of unused sessions
 
 - updated: `WEBSOCKET()` supports `+`, `-` and `🔒` as authorization flags
 - updated: `LOAD()` supports `service` type
